src/components/traces/TraceTree/TraceTree.module.scss
@import "styles/variables.module.scss";
@import "styles/mixins";

.container {
    border:1px solid $grey-800;
    border-radius: $sp-sm;display: flex;
    flex-direction: column;
    width:100%;
    background-color: $bg-dark;
    z-index: 2;
    min-height: 350px;
}

.custom-error-text {
    margin:$sp-lg;
}

.alert {
    background-color: rgba($warning-700,0.2);
    margin:$sp-md 0;
}

.header {
    @include card-header;
    h5 {
        display: flex;
        column-gap: $sp-base * 4;
    }
}
.synth-btn {
    display: flex;
    align-items: center;
    column-gap: $sp-base * 2;
    font-size: $font-sm;
    img {
        width:16px;
        height:16px;
    }
}
.header-actions {
    display: flex;
    align-items: center;
    column-gap: $sp-base * 2;
}
.expand-icon {
    font-size: $font-lg + 2;
}
.expanded-btn {
    background-color: $primary-500 !important;
}
.exception-parent {
    color:$error-500 !important;
}

.expanded {
    padding:$sp-lg;
}


.tree {
    position: relative;
    flex:1;
    padding:$sp-base $sp-sm;
    overflow-y: auto;
    max-height: 350px;
    // margin-bottom: $sp-lg;
    :global(.Mui-expanded){
        margin:0;
    }
    :global(.MuiAccordionSummary-content){
        margin: 0;
        margin-bottom: $sp-base;
    }
    :global(.MuiAccordionSummary-content:last-child){
        margin-bottom:0;
    }
    border-bottom: 1px solid $grey-800;
    padding-bottom: $sp-xxxl;
}

.list-span-container {
    display: grid;
    grid-template-columns: 4fr 6fr;
}

.list-span-latency {
    display: flex;
    align-items: center;
    column-gap: $sp-base;
}
.expanded {
    padding:$sp-lg;
    max-height: fit-content;
}
.lock-scroll {
    overflow: hidden;
}

.accordion {
    border:none;
    height:100%;
    span {
        color:$grey-25;
    }
}

.root-accordion {
    border-left: 1px solid $grey-500 !important;
}

.accordion-summary {
    background-color: $bg-dark;
    margin:0 !important;
    padding-left: $sp-base;
    justify-content: space-between;
    width:100%;
    min-height: 0px !important;
    padding:$sp-base / 2 0;
    border-radius: 0;
    border: none;
    cursor: pointer;
    &:hover {
        background-color: $grey-900;
    }
    // margin-left: -$sp-base;
}

.accordion-summary-content {
    display: flex;
}
.last-child {
    margin:$sp-base 0;
    margin-left: - $sp-base;

    height:32px;
    &:hover {
        background-color: $grey-900;
    }
}


.accordion-label {
    color:$grey-25;
    z-index:1000;
    line-height: 20px;
    font-weight: 500;
    padding-top: $sp-base / 2;
    margin-left: $sp-sm;
    &:hover {
        color:$primary-500;
    }
}

.accordion-label-container {
    display: flex;
    column-gap: $sp-sm;
    align-items: center;
    cursor: pointer;
    .operation-name {
        color:$grey-300;
    }
    
}


.latency {
    color:$grey-200;
    width:100px;
}
.accordion-details {
    border:none;
    border-left: 1px solid $grey-700;
    padding:0 $sp-sm;
    padding-right: 0;
    background-color: $bg-dark;
}

.close-button {
    position: absolute;
    top: $sp-md;
    right: 920px;
    // cursor: pointer;
    z-index: 500;
    background-color: $grey-800;
    display: flex;
    align-items: center;
    justify-content: center;
    height:24px;
    width:24px;
    border-radius: $sp-base;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.close-icon {
    color:$grey-300;
    font-size: $font-lg;
}

.accordion-row {
    display:grid;
    grid-template-columns: 2fr 2fr;
}

.accordion-summary, .last-child {
    display: flex;
    align-items: center;
    position: relative;
    
    // padding:$sp-base / 2 0;
}

.selected-span {
   background-color: $grey-900;
   border-radius: $sp-xs / 2;
}

.last-child {
    padding: 0 $sp-md;  
    padding-bottom: $sp-base / 2;
    display: flex;
}


.timeline {
    flex: 1;
    display: flex;
    align-items: center;
    p {
        height:$sp-base;
        background-color: #569CD7;
    }
}


.modal {
    display: flex;
    margin-top: 10vh;
    width:92vw;
    margin:10vh auto;
    // height:300px;
    height:70vh;

}

.backdrop {
    position: fixed;
    top:0;
    left:0;
    right:0;
    overflow: hidden;
    height:100vh;
    width:100vw;
    background-color: rgba(0,0,0,0.5);
    z-index: 1;
}

.span-name {
    display: flex;
    align-items: center;
    column-gap: $sp-sm;
}

.span-method {
    font-weight: 600;
    text-transform: uppercase;
    color:$grey-100;
    padding:0 $sp-base * 1.5;
    font-size: smaller;
    line-height: $default-line-height; 
    border-radius: $sp-base / 2;
    line-height: 20px;
    height:20px;
    font-size: $font-xs + 1;
    @media only screen and (max-width: $bp-desktop) {
        font-size: $font-xs;
    }
}

.span-route {
    font-weight: 300;
    // font-style: italic;
    color:$grey-100 !important;
    // font-size: smaller;
}

.trace-btn {
    display: flex;
    align-items: center;
    column-gap: $sp-base * 2;
}

.raw-data-icon {
   width:20px;
   height: 20px;
}

